--- a/index.html
+++ b/index.html
@@ -7,28 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Login Page -->
-    <div id="loginPage">
-        <h1>Forest Monitoring System</h1>
-        <button onclick="openLogin('stakeholder')">Login as Stakeholder</button>
-        <button onclick="openLogin('forest_official')">Login as Forest Official</button>
-        <button onclick="openLogin('end_user')">Login as End User</button>
-    </div>
-
-    <!-- Login Forms -->
-    <div id="loginForm" class="hidden">
-        <h2 id="loginTitle"></h2>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" placeholder="Enter username"><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Enter password"><br>
-        <button onclick="login()">Login</button>
-        <button onclick="signup()">Sign Up</button>
-        <p id="error" class="error hidden">Invalid username or password</p>
-    </div>
-
     <!-- Dashboard -->
-    <div id="dashboard" class="hidden">
+    <div id="dashboard">
         <h1>Forest Conflict Dashboard</h1>
         <select id="countrySelector" onchange="updateDashboard()">
             <option value="USA">U.S.A</option>
@@ -52,6 +32,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
